      - the get_list_mandatory_flag() subroutine.
  * Changed:
    - cifvalues:
      - updated the help message.
    - cif_validate:
      - reworded a validation message to explicitly state that the composite
        loop reference requires collectivelly unique values.
  * Removed:
      - the 'database-schemas/cif2cod.sql' file.
  * Fixed:
      - cif_list_tags:
        - a typo in an option name ('--vebose' to '--verbose').

cod-tools (2.9)

  * Changed:
    - COD::CIF::Data::CIF2COD:
      - updated the validate_SQL_types() subroutine to return an undef
        value instead of a value that is not compatible with the specified
        SQL CHAR/VARCHAR field;
      - updated the cif2cod() subroutine to determine the number of elements
        from the calculated formula instead of defaulting to '0' when the
        summary formula is not explicitly provided;
      - updated the text of several warning messages.
  * Fixed:
    - COD::CIF::Data::CIF2COD:
      - updated the calculate_formula_sum() subroutine to return an undefined
        value instead of a string consisting of question marks and digits
        when processing CIF files with unknown ('?') coordinate values.
      - updated the calculate_formula_sum() subroutine to return an undefined
        value instead of a decorated empty string ('-  -') when processing
        CIF files with inapplicable ('.') coordinate values.

cod-tools (2.8)

  * Added:
    - COD::CIF::Data::CIF2COD:
      - several warning messages informing about unrecognised COD error flag
        values or unrecognised COD issue severity values.
    - COD::CIF::Data::CODNumbers:
      - the 'related_enantiomer_entries' field to the data structure that
        is returned by the 'cif_fill_data' subroutine and used by other
        subroutines in the same module. The 'related_enantiomer_entries'
        field serves as a replacement for the 'enantiomer field and is