@@ -1,0 +1,1 @@
+../inputs/cif2cod/various_gof_gt_items.cif
