@@ -1,0 +1,1 @@
+--columns gofobs,gofgt
