@@ -1,0 +1,1 @@
+Test the way the 'gofobs' and 'gofgt' columns are populated with data.
