@@ -1,0 +1,111 @@
+data_goodness_of_fit_gt
+_space_group_name_H-M_alt       'P 1'
+_space_group_name_Hall          'P 1'
+_journal_name_full              'Fake journal used for CIF software testing purposes'
+_publ_section_title             'Fake title used for CIF software testing purposes'
+_journal_year                   1970
+_journal_volume                 1970
+_journal_page_first             1
+_cell_formula_units_Z           1
+_cell_length_a                  5
+_cell_length_b                  5
+_cell_length_c                  5
+_cell_angle_alpha               90
+_cell_angle_beta                90
+_cell_angle_gamma               90
+_chemical_formula_sum           H
+_refine_ls_goodness_of_fit_all  1.239
+_refine_ls_goodness_of_fit_gt   3.141
+_refine_ls_goodness_of_fit_ref  1.166
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+H H 0.5 0.5 0.5
+
+data_goodness_of_fit_obs
+_space_group_name_H-M_alt       'P 1'
+_space_group_name_Hall          'P 1'
+_journal_name_full              'Fake journal used for CIF software testing purposes'
+_publ_section_title             'Fake title used for CIF software testing purposes'
+_journal_year                   1970
+_journal_volume                 1970
+_journal_page_first             1
+_cell_formula_units_Z           1
+_cell_length_a                  5
+_cell_length_b                  5
+_cell_length_c                  5
+_cell_angle_alpha               90
+_cell_angle_beta                90
+_cell_angle_gamma               90
+_chemical_formula_sum           H
+_refine_ls_goodness_of_fit_all  1.239
+_refine_ls_goodness_of_fit_obs  1.618
+_refine_ls_goodness_of_fit_ref  1.166
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+H H 0.5 0.5 0.5
+
+# When both the '_refine_ls_goodness_of_fit_gt' and
+# the '_refine_ls_goodness_of_fit_obs' data items are
+# provided in the loop, the value of the '_refine_ls_goodness_of_fit_gt'
+# item should be used
+data_goodness_of_fit_both
+_space_group_name_H-M_alt       'P 1'
+_space_group_name_Hall          'P 1'
+_journal_name_full              'Fake journal used for CIF software testing purposes'
+_publ_section_title             'Fake title used for CIF software testing purposes'
+_journal_year                   1970
+_journal_volume                 1970
+_journal_page_first             1
+_cell_formula_units_Z           1
+_cell_length_a                  5
+_cell_length_b                  5
+_cell_length_c                  5
+_cell_angle_alpha               90
+_cell_angle_beta                90
+_cell_angle_gamma               90
+_chemical_formula_sum           H
+_refine_ls_goodness_of_fit_all  1.239
+_refine_ls_goodness_of_fit_gt   3.141
+_refine_ls_goodness_of_fit_obs  1.618
+_refine_ls_goodness_of_fit_ref  1.166
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+H H 0.5 0.5 0.5
+
+data_goodness_of_fit_gt
+_space_group_name_H-M_alt       'P 1'
+_space_group_name_Hall          'P 1'
+_journal_name_full              'Fake journal used for CIF software testing purposes'
+_publ_section_title             'Fake title used for CIF software testing purposes'
+_journal_year                   1970
+_journal_volume                 1970
+_journal_page_first             1
+_cell_formula_units_Z           1
+_cell_length_a                  5
+_cell_length_b                  5
+_cell_length_c                  5
+_cell_angle_alpha               90
+_cell_angle_beta                90
+_cell_angle_gamma               90
+_chemical_formula_sum           H
+_refine_ls_goodness_of_fit_all  1.239
+_refine_ls_goodness_of_fit_ref  1.166
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+H H 0.5 0.5 0.5
