@@ -1,3 +1,3 @@
 scripts/cif2cod: tests/cases/cif2cod_010.inp data_7011014: WARNING, data item '_journal_volume' is absent.
 file;a;siga;b;sigb;c;sigc;alpha;sigalpha;beta;sigbeta;gamma;siggamma;vol;sigvol;celltemp;sigcelltemp;diffrtemp;sigdiffrtemp;cellpressure;sigcellpressure;diffrpressure;sigdiffrpressure;thermalhist;pressurehist;compoundsource;nel;sg;sgHall;commonname;chemname;mineral;formula;calcformula;cellformula;Z;Zprime;acce_code;authors;title;journal;year;volume;issue;firstpage;lastpage;doi;method;radiation;wavelength;radType;radSymbol;Rall;Robs;Rref;wRall;wRobs;wRref;RFsqd;RI;gofall;gofobs;gofgt;duplicateof;optimal;status;flags;text;onhold
-"7011014";"10.737";"0.003";"15.744";"0.003";"12.523";"0.003";"90.0";NULL;"111.967";"0.019";"90.0";NULL;"1963.2";"0.9";"293";NULL;"293";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"7";"P 1 21/n 1";"-P 2yn";NULL;"? #Insert the chemical name here.";NULL;"- C12 H30 Cl Fe N2 O Si2 -";"- C12 H30 Cl Fe N2 O Si2 -";"- C48 H120 Cl4 Fe4 N8 O4 Si8 -";"4";"1";NULL;"Garry Mund; Raymond J. Batchelor; Rajendra D. Sharma; Colin H. W. Jones; Daniel B. Leznoff";"{FeCl[tBuN(SiMe2)]2O}2: The first multinuclear iron(III) complex exhibiting spin-admixture";"J. Chem. Soc., Dalton Trans.";"2002";NULL;"2";"136";"137";NULL;NULL;NULL;"0.70930";"MolybdenumKα";NULL;NULL;"0.038";NULL;NULL;"0.030";NULL;NULL;NULL;NULL;"1.60";NULL;NULL;NULL;NULL;"has coordinates";"Garry Mund; Raymond J. Batchelor; Rajendra D. Sharma; Colin H. W. Jones; Daniel B. Leznoff\n{FeCl[tBuN(SiMe2)]2O}2: The first multinuclear iron(III) complex exhibiting spin-admixture\nJ. Chem. Soc., Dalton Trans.\n(issue 2)\n(2002)\n136-137";NULL
+"7011014";"10.737";"0.003";"15.744";"0.003";"12.523";"0.003";"90.0";NULL;"111.967";"0.019";"90.0";NULL;"1963.2";"0.9";"293";NULL;"293";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"7";"P 1 21/n 1";"-P 2yn";NULL;"? #Insert the chemical name here.";NULL;"- C12 H30 Cl Fe N2 O Si2 -";"- C12 H30 Cl Fe N2 O Si2 -";"- C48 H120 Cl4 Fe4 N8 O4 Si8 -";"4";"1";NULL;"Garry Mund; Raymond J. Batchelor; Rajendra D. Sharma; Colin H. W. Jones; Daniel B. Leznoff";"{FeCl[tBuN(SiMe2)]2O}2: The first multinuclear iron(III) complex exhibiting spin-admixture";"J. Chem. Soc., Dalton Trans.";"2002";NULL;"2";"136";"137";NULL;NULL;NULL;"0.70930";"MolybdenumKα";NULL;NULL;"0.038";NULL;NULL;"0.030";NULL;NULL;NULL;NULL;"1.60";"1.60";NULL;NULL;NULL;"has coordinates";"Garry Mund; Raymond J. Batchelor; Rajendra D. Sharma; Colin H. W. Jones; Daniel B. Leznoff\n{FeCl[tBuN(SiMe2)]2O}2: The first multinuclear iron(III) complex exhibiting spin-admixture\nJ. Chem. Soc., Dalton Trans.\n(issue 2)\n(2002)\n136-137";NULL
