@@ -1,3 +1,3 @@
 scripts/cif2cod: tests/cases/cif2cod_015.inp data_2003005: WARNING, data item '_publ_section_title' is absent.
 file;a;siga;b;sigb;c;sigc;alpha;sigalpha;beta;sigbeta;gamma;siggamma;vol;sigvol;celltemp;sigcelltemp;diffrtemp;sigdiffrtemp;cellpressure;sigcellpressure;diffrpressure;sigdiffrpressure;thermalhist;pressurehist;compoundsource;nel;sg;sgHall;commonname;chemname;mineral;formula;calcformula;cellformula;Z;Zprime;acce_code;authors;title;journal;year;volume;issue;firstpage;lastpage;doi;method;radiation;wavelength;radType;radSymbol;Rall;Robs;Rref;wRall;wRobs;wRref;RFsqd;RI;gofall;gofobs;gofgt;duplicateof;optimal;status;flags;text;onhold
-"2003005";"10.772";"0.002";"10.772";"0.002";"10.772";"0.002";"90";NULL;"90";NULL;"90";NULL;"1250.1";"0.6";"293";NULL;"293";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"3";"P 21 3";"P 2ac 2ab 3";NULL;NULL;NULL;"- Ag7 P Se6 -";"- Ag7 P Se6 -";"- Ag28 P4 Se24 -";"4";"0.333333333333333";NULL;NULL;NULL;"Acta Crystallographica, Section B";"1998";"54";NULL;"376";"383";NULL;NULL;NULL;".56090";"AgK-L~2,3~";NULL;NULL;".0267";NULL;NULL;".0266";NULL;NULL;NULL;NULL;".76";NULL;NULL;NULL;NULL;"has coordinates";"\n\nActa Crystallographica, Section B\n54\n(1998)\n376-383";NULL
+"2003005";"10.772";"0.002";"10.772";"0.002";"10.772";"0.002";"90";NULL;"90";NULL;"90";NULL;"1250.1";"0.6";"293";NULL;"293";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"3";"P 21 3";"P 2ac 2ab 3";NULL;NULL;NULL;"- Ag7 P Se6 -";"- Ag7 P Se6 -";"- Ag28 P4 Se24 -";"4";"0.333333333333333";NULL;NULL;NULL;"Acta Crystallographica, Section B";"1998";"54";NULL;"376";"383";NULL;NULL;NULL;".56090";"AgK-L~2,3~";NULL;NULL;".0267";NULL;NULL;".0266";NULL;NULL;NULL;NULL;".76";".76";NULL;NULL;NULL;"has coordinates";"\n\nActa Crystallographica, Section B\n54\n(1998)\n376-383";NULL
