@@ -1,2 +1,2 @@
 file;a;siga;b;sigb;c;sigc;alpha;sigalpha;beta;sigbeta;gamma;siggamma;vol;sigvol;celltemp;sigcelltemp;diffrtemp;sigdiffrtemp;cellpressure;sigcellpressure;diffrpressure;sigdiffrpressure;thermalhist;pressurehist;compoundsource;nel;sg;sgHall;commonname;chemname;mineral;formula;calcformula;cellformula;Z;Zprime;acce_code;authors;title;journal;year;volume;issue;firstpage;lastpage;doi;method;radiation;wavelength;radType;radSymbol;Rall;Robs;Rref;wRall;wRobs;wRref;RFsqd;RI;gofall;gofobs;gofgt;duplicateof;optimal;status;flags;text;onhold
-"1100163";"12.9507";"0.0017";"9.0191";"0.0011";"22.209";"0.003";"90.00";NULL;"119.763";"0.006";"90.00";NULL;"2251.9";"0.5";"293";"2";"293";"2";NULL;NULL;NULL;NULL;NULL;NULL;NULL;"5";"P 1 21/c 1";"-P 2ybc";NULL;NULL;NULL;"- C46 H46 N12 O6 Zn -";"- C46 H46 N12 O6 Zn -";"- C92 H92 N24 O12 Zn2 -";"2";"0.5";NULL;"Carballo, Rosa; Vazquez-Lopez, Ezequiel M.; Covelo, Berta; Garcia-Martinez, Emilia; Castineiras, Alfonso; Niclos, Juan";"'Solid state coordination chemistry of mononuclear mixed-ligand complexes of Ni(II), Cu(II) and Zn(II) with α-hydroxycarboxylic acids and imidazole'";"Polyhedron";"2004";"23";NULL;"1505";"1518";NULL;NULL;"xray";"0.71073";"MoKα";NULL;"0.1162";"0.0621";NULL;NULL;"0.1005";"0.1152";NULL;NULL;NULL;"1.048";NULL;NULL;NULL;NULL;"has coordinates";"Carballo, Rosa; Vazquez-Lopez, Ezequiel M.; Covelo, Berta; Garcia-Martinez, Emilia; Castineiras, Alfonso; Niclos, Juan\n'Solid state coordination chemistry of mononuclear mixed-ligand complexes of Ni(II), Cu(II) and Zn(II) with α-hydroxycarboxylic acids and imidazole'\nPolyhedron\n23\n(2004)\n1505-1518";NULL
+"1100163";"12.9507";"0.0017";"9.0191";"0.0011";"22.209";"0.003";"90.00";NULL;"119.763";"0.006";"90.00";NULL;"2251.9";"0.5";"293";"2";"293";"2";NULL;NULL;NULL;NULL;NULL;NULL;NULL;"5";"P 1 21/c 1";"-P 2ybc";NULL;NULL;NULL;"- C46 H46 N12 O6 Zn -";"- C46 H46 N12 O6 Zn -";"- C92 H92 N24 O12 Zn2 -";"2";"0.5";NULL;"Carballo, Rosa; Vazquez-Lopez, Ezequiel M.; Covelo, Berta; Garcia-Martinez, Emilia; Castineiras, Alfonso; Niclos, Juan";"'Solid state coordination chemistry of mononuclear mixed-ligand complexes of Ni(II), Cu(II) and Zn(II) with α-hydroxycarboxylic acids and imidazole'";"Polyhedron";"2004";"23";NULL;"1505";"1518";NULL;NULL;"xray";"0.71073";"MoKα";NULL;"0.1162";"0.0621";NULL;NULL;"0.1005";"0.1152";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"has coordinates";"Carballo, Rosa; Vazquez-Lopez, Ezequiel M.; Covelo, Berta; Garcia-Martinez, Emilia; Castineiras, Alfonso; Niclos, Juan\n'Solid state coordination chemistry of mononuclear mixed-ligand complexes of Ni(II), Cu(II) and Zn(II) with α-hydroxycarboxylic acids and imidazole'\nPolyhedron\n23\n(2004)\n1505-1518";NULL
