@@ -1,2 +1,2 @@
 file;a;siga;b;sigb;c;sigc;alpha;sigalpha;beta;sigbeta;gamma;siggamma;vol;sigvol;celltemp;sigcelltemp;diffrtemp;sigdiffrtemp;cellpressure;sigcellpressure;diffrpressure;sigdiffrpressure;thermalhist;pressurehist;compoundsource;nel;sg;sgHall;commonname;chemname;mineral;formula;calcformula;cellformula;Z;Zprime;acce_code;authors;title;journal;year;volume;issue;firstpage;lastpage;doi;method;radiation;wavelength;radType;radSymbol;Rall;Robs;Rref;wRall;wRobs;wRref;RFsqd;RI;gofall;gofobs;gofgt;duplicateof;optimal;status;flags;text;onhold
-"8102326";"6.851";"0.002";"11.716";"0.004";"21.283";"0.007";"90.00";NULL;"90.00";NULL;"90.00";NULL;"1708.3";"1";"293.15";NULL;"293.15";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"6";"P c c n";"-P 2ab 2ac";NULL;"diaqua-dichloro(1,10-phenanthroline)-chromium(iii) chloride dihydrate";NULL;"- C12 H16 Cl3 Cr N2 O4 -";"- C12 H16 Cl3 Cr N2 O4 -";"- C48 H64 Cl12 Cr4 N8 O16 -";"4";"0.5";NULL;"Yong-Li Yang; Feng-Ge Li; Qing-Juan Zhang; Yan-Feng Ding; Yu-Heng Deng";"Crystal structure of diaquadichloro(1,10-phenanthroline)chromium(III) chloride dihydrate, [CrCl2(C12H8N2)(H2O)2]Cl · 2H2O";"Zeitschrift für Kristallographie - New Crystal Structures";"2008";"223";"4";"409";NULL;NULL;NULL;NULL;"0.7107";"MoKα";NULL;"0.0439";"0.0403";NULL;NULL;"0.1339";"0.1393";NULL;NULL;NULL;"1.043";NULL;NULL;NULL;NULL;"has coordinates";"Yong-Li Yang; Feng-Ge Li; Qing-Juan Zhang; Yan-Feng Ding; Yu-Heng Deng\nCrystal structure of diaquadichloro(1,10-phenanthroline)chromium(III) chloride dihydrate, [CrCl2(C12H8N2)(H2O)2]Cl · 2H2O\nZeitschrift für Kristallographie - New Crystal Structures\n223(4)\n(2008)\n409";NULL
+"8102326";"6.851";"0.002";"11.716";"0.004";"21.283";"0.007";"90.00";NULL;"90.00";NULL;"90.00";NULL;"1708.3";"1";"293.15";NULL;"293.15";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"6";"P c c n";"-P 2ab 2ac";NULL;"diaqua-dichloro(1,10-phenanthroline)-chromium(iii) chloride dihydrate";NULL;"- C12 H16 Cl3 Cr N2 O4 -";"- C12 H16 Cl3 Cr N2 O4 -";"- C48 H64 Cl12 Cr4 N8 O16 -";"4";"0.5";NULL;"Yong-Li Yang; Feng-Ge Li; Qing-Juan Zhang; Yan-Feng Ding; Yu-Heng Deng";"Crystal structure of diaquadichloro(1,10-phenanthroline)chromium(III) chloride dihydrate, [CrCl2(C12H8N2)(H2O)2]Cl · 2H2O";"Zeitschrift für Kristallographie - New Crystal Structures";"2008";"223";"4";"409";NULL;NULL;NULL;NULL;"0.7107";"MoKα";NULL;"0.0439";"0.0403";NULL;NULL;"0.1339";"0.1393";NULL;NULL;NULL;NULL;NULL;NULL;NULL;NULL;"has coordinates";"Yong-Li Yang; Feng-Ge Li; Qing-Juan Zhang; Yan-Feng Ding; Yu-Heng Deng\nCrystal structure of diaquadichloro(1,10-phenanthroline)chromium(III) chloride dihydrate, [CrCl2(C12H8N2)(H2O)2]Cl · 2H2O\nZeitschrift für Kristallographie - New Crystal Structures\n223(4)\n(2008)\n409";NULL
