@@ -37,7 +37,6 @@ Robs 0.0584
 wRall 0.2069
 wRref 0.1362
 gofall 1.055
-gofobs 1.080
 flags has coordinates
 text \n\n\n\n()\n
 onhold 2013-03-21
