@@ -1,0 +1,4 @@
+"3.141";"3.141"
+"1.618";"1.618"
+"3.141";"3.141"
+NULL;NULL
