@@ -25,7 +25,6 @@ scripts/cif2rdf: tests/cases/cif2rdf_003.inp data_C5H17AlN2O8P2: WARNING, no Hal
     <cod:formula>C5 H17 Al N2 O8 P2</cod:formula>
     <cod:gamma>90.00</cod:gamma>
     <cod:gofall>1.055</cod:gofall>
-    <cod:gofobs>1.080</cod:gofobs>
     <cod:nel>6</cod:nel>
     <cod:radType>MoK&#x03B1;</cod:radType>
     <cod:sg>P2~1~/n</cod:sg>
