@@ -24,6 +24,7 @@
   cod:formula "C16 H24 Cl2 Rh2";
   cod:gamma "90.00000";
   cod:gofall "1.239";
+  cod:gofgt "1.057";
   cod:gofobs "1.057";
   cod:issue "10";
   cod:journal "Acta Crystallographica Section C";
