@@ -25,7 +25,6 @@ scripts/cif2rdf: tests/inputs/1000000.cif data_C5H17AlN2O8P2: WARNING, no Hall s
     <cod:formula>C5 H17 Al N2 O8 P2</cod:formula>
     <cod:gamma>90.00</cod:gamma>
     <cod:gofall>1.055</cod:gofall>
-    <cod:gofobs>1.080</cod:gofobs>
     <cod:nel>6</cod:nel>
     <cod:radType>MoKα</cod:radType>
     <cod:sg>P2~1~/n</cod:sg>
@@ -64,6 +63,7 @@ scripts/cif2rdf: tests/inputs/1000000.cif data_C5H17AlN2O8P2: WARNING, no Hall s
     <cod:formula>C16 H24 Cl2 Rh2</cod:formula>
     <cod:gamma>90.00000</cod:gamma>
     <cod:gofall>1.239</cod:gofall>
+    <cod:gofgt>1.057</cod:gofgt>
     <cod:gofobs>1.057</cod:gofobs>
     <cod:issue>10</cod:issue>
     <cod:journal>Acta Crystallographica Section C</cod:journal>
