@@ -20,6 +20,7 @@
 <http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/formula> "C16 H24 Cl2 Rh2".
 <http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/gamma> "90.00000".
 <http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/gofall> "1.239".
+<http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/gofgt> "1.057".
 <http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/gofobs> "1.057".
 <http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/issue> "10".
 <http://www.crystallography.net/cod/2010123.html> <http://www.crystallography.net/cod/doc/rdf/journal> "Acta Crystallographica Section C".
