@@ -19,7 +19,11 @@ cod-tools (unreleased)
       - the 'database-schemas/cif2cod.sql' file.
   * Fixed:
       - cif_list_tags:
-        - a typo in an option name ('--vebose' to '--verbose').
+        - a typo in an option name ('--vebose' to '--verbose');
+      - COD::CIF::Data::CIF2COD:
+        - changed the data item set from which the value for the 'gofobs' column
+          is retrieved from ['_refine_ls_goodness_of_fit_ref'] to
+          ['_refine_ls_goodness_of_fit_gt', '_refine_ls_goodness_of_fit_obs'].
 
 cod-tools (2.9)
 
